# rust-srt

./: .env  .gitignore  002 Introduction to the blockchain_en.srt_zh.srt  Cargo.toml  README.md  subtitles.srt
src/: main.rs
srt/: 002 Introduction to the blockchain_en.srt
